--- a/links.html
+++ b/links.html
@@ -11,12 +11,12 @@
       <h2>Creating Links</h2>
       <nav role="navigation">
         <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
+          <li><a href="index.html" title="Introduction to HTML">Introduction to HTML</a></li>
+          <li><a href="syntax.html" title="HTML Syntax">HTML syntax</a></li>
+          <li><a href="structure.html" title="Structuring Pages">Structuring pages<a/></li>
+          <li><a href="links.html" title="Creating Links">Creating links</a></li>
+          <li><a href="reference.html" title="HTML Reference">HTML reference</a></li>
+          <li><a href="next.html" title="Next Steps">Next steps</a></li>
         </ul>
       </nav>
     </header>
@@ -168,7 +168,8 @@
       </article>
     </main>
     <footer role="contentinfo">
-      <p>CSUN 18111 Nordhoff St Northridge, CA 91330</p>
+      <p><a href="csun.edu" title"CSUN Website" target="_blank">CSUN</a> 18111 Nordhoff St Northridge, CA 91330</p>
+      <p><a href="https://x.com/csunorthridge?lang=en" title"CSUN Twitter" target="_blank">Follow us on Twitter!</a></p>
     </footer>
   </body>
 </html>
