--- a/reference.html
+++ b/reference.html
@@ -25,7 +25,7 @@
         <header>
           <p>
             On this page you&rsquo;ll find a quick reference to common HTML
-            terms and <a href="#table" title="Table of characters">a table</a> of frequently used named character entities.
+            terms and a table of frequently used <a href="#table" title="Table of characters">named character entities.</a>
           </p>
         </header>
         <section>
