Fixed issue with csun.edu link

--- a/links.html
+++ b/links.html
@@ -168,7 +168,7 @@
       </article>
     </main>
     <footer role="contentinfo">
-      <p><a href="csun.edu" title"CSUN Website" target="_blank">CSUN</a> 18111 Nordhoff St Northridge, CA 91330</p>
+      <p><a href="https://www.csun.edu/" title"CSUN Website" target="_blank">CSUN</a> 18111 Nordhoff St Northridge, CA 91330</p>
       <p><a href="https://x.com/csunorthridge?lang=en" title"CSUN Twitter" target="_blank">Follow us on Twitter!</a></p>
     </footer>
   </body>
